just another day

--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -26,10 +26,10 @@
 }
 
 /* .search-box input {
-    width: 100%;
+    width: 50%;
     padding: 10px;
-} */
+}
 
-/* ::placeholder {
+::placeholder {
     font-size: 15px;
 } */
